Added IS_IU env var when doing first call with BATCHING

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 setuptools>=41.0.1
-# -e git+https://github.com/imio/imio.pyutils#egg=imio.pyutils
-imio.pyutils==1.0.4
+-e git+https://github.com/imio/imio.pyutils#egg=imio.pyutils
+#imio.pyutils==1.0.4
 pdbpp==0.10.3
 requests
